--- a/index.html
+++ b/index.html
@@ -6,9 +6,176 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="css/animate.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Daniel Portfolio</title>
+    <title>HSPFO</title>
   </head>
   <body>
+
+    <div class="container-navbar" style="border: 1px solid; margin: 10px;">
+      <header style="border: 1px solid; margin: 10px;">
+        <div class="lgo" style="border: 1px solid; margin: 10px;">
+
+
+        </div>
+
+        <nav style="border: 1px solid; margin: 10px;">
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#work">My Work</a></li>
+        </nav>
+
+
+      </header>
+    </div>
+
+    <div class="container main-info-section">
+      <div class="text">
+        <h1>
+          <span>H</span>
+          <span class="m-left">i</span>
+          <span class="m-left">,</span>
+          <br>
+          <span>I</span>
+          <span class="m-left">'</span>
+          <span class="m-left">m</span>
+          <span class="name">H</span>
+          <span class="m-left name">a</span>
+          <span class="m-left name">r</span>
+          <span class="m-left name">i</span>
+          <span class="m-left name">s</span>
+          <span class="m-left name">h</span>
+          <span class="m-left">,</span>
+          <br>
+          <span class="name">S</span>
+          <span class="m-left name">a</span>
+          <span class="m-left name">n</span>
+          <span class="m-left name">k</span>
+          <span class="m-left name">a</span>
+          <span class="m-left name">r</span>
+          <br>
+          <span class="name">A</span>
+          <span class="m-left name">g</span>
+          <span class="m-left name">h</span>
+          <span class="m-left name">i</span>
+          <span class="m-left name">l</span>
+          <span class="m-left name">a</span>
+        </h1>
+        <p>CSS / javaScript / React</p>
+        <a href="#contact">contact me</a>
+      </div>
+
+      <div class="profile-image">
+        <img src="img/profile-image.png" alt="">
+
+      </div>
+    </div>
+
+    <div class="container about" id="about">
+      <h1>About</h1>
+      <div class="about-me-info">
+        <p>Some text can be copied from the internet or some more can be just pasted. The difference is just in the making of a
+          superhuman power that arises from within just copying stuff 
+        </p>
+        <p>Some text can be copied from the internet or some more can be just pasted. The difference is just in the making of a
+          superhuman power that arises from within just copying stuff 
+        </p>
+        <p>Some text can be copied from the internet or some more can be just pasted. The difference is just in the making of a
+          superhuman power that arises from within just copying stuff 
+        </p> 
+      </div>
+      <img src="img/dotted-shape.png" alt="">
+    </div>
+
+    <div class="container skills" id="skills">
+
+      <h1>Skills</h1>
+      <p class="skills-info">Some text can be copied from the internet or some more can be just pasted. The difference is just in the making of a
+        superhuman power that arises from within just copying stuff.Some text can be copied from the internet or some more can be just pasted. The difference is just in the making of a
+        superhuman power that arises from within just copying stuff</p>
+
+        <div class="html">
+          <div class="tag-html">
+            <p>HTML</p>
+          </div>
+          <div class="progressbar">
+            <div class="bar-html"></div>
+          </div>
+        </div>
+
+        <div class="html">
+          <div class="tag-css">
+            <p>HTML</p>
+          </div>
+          <div class="progressbar">
+            <div class="bar-css"></div>
+          </div>
+        </div>
+
+        <div class="html">
+          <div class="tag-javascript">
+            <p>HTML</p>
+          </div>
+          <div class="progressbar">
+            <div class="bar-javascript"></div>
+          </div>
+        </div>
+
+        <div class="html">
+          <div class="tag-react">
+            <p>HTML</p>
+          </div>
+          <div class="progressbar">
+            <div class="bar-react"></div>
+          </div>
+        </div>
+
+    </div>
+
+    <div class="container work" id="work">
+
+      <h1>work</h1>
+      <div class="work-category">
+        <button id="designing" class="active">Web Designing</button>
+        <button id="animation" >Web Animation</button>
+        <button id="project" >React Projects</button>
+      </div>
+
+      <div class="category-designing showCategory">
+        <a href=""><img src="img/1.png" alt=""></a>
+        <a href=""><img src="img/2.png" alt=""></a>
+        <a href=""><img src="img/3.png" alt=""></a>
+        <a href=""><img src="img/2.png" alt=""></a>
+        <a href=""><img src="img/3.png" alt=""></a>
+      </div>     
+      <div class="category-designing hideCategory">
+        <a href=""><img src="img/1.png" alt=""></a>
+        <a href=""><img src="img/2.png" alt=""></a>
+        <a href=""><img src="img/3.png" alt=""></a>
+      </div>
+      <div class="category-designing hideCategory">
+        <a href=""><img src="img/1.png" alt=""></a>
+        <a href=""><img src="img/2.png" alt=""></a>
+        <a href=""><img src="img/3.png" alt=""></a>
+        <a href=""><img src="img/2.png" alt=""></a>
+      </div>
+    </div>
+
+    <div class="container contact" id="contact">
+      <h1>Contact</h1>
+      <form >
+        <input type="text" name="name" placeholder="Full Name">
+        <input type="email" placeholder="Email">
+        <input type="email" placeholder="PortFolioPersonal@gmail.com" disabled>
+        <textarea name="message" cols="30" rows="10" placeholder="Message"></textarea>
+        <input type="submit">
+      </form>
+    </div>
+
+    <footer>
+        <hr>
+        <p>2020 Copyright. All Rights Reserved</p>
+    </footer>
+
+
     <script src="js/ScrollMagic.min.js"></script>
     <script src="js/animation.gsap.min.js"></script>
     <script src="js/TimelineLite.min.js"></script>
