--- a/index.html
+++ b/index.html
@@ -12,20 +12,19 @@
 
 <body>
 
-  <div class="container navbar" style="border: 1px solid; margin: 10px;">
-    <header style="border: 1px solid; margin: 10px;">
-      <div class="lgo" style="border: 1px solid; margin: 10px;">
-
+  <div class="container navbar" >
+    <header>
+      <div class="lgo" >
+        <h1>Harish</h1>
       </div>
 
-      <nav style="border: 1px solid; margin: 10px;">
+      <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#work">My Work</a></li>
         </ul>
       </nav>
-
 
     </header>
   </div>
@@ -78,7 +77,7 @@
     <h1>About</h1>
     <div class="about-me-info">
       <p>Some text can be copied from the internet or some more can be just pasted. The difference is just in the making
-        of a
+        of a <a href="#work">Something</a>
         superhuman power that arises from within just copying stuff
       </p>
       <p>Some text can be copied from the internet or some more can be just pasted. The difference is just in the making
