CSS completed. Javascript to be added

--- a/index.html
+++ b/index.html
@@ -96,10 +96,9 @@
 
     <h1>Skills</h1>
     <p class="skills-info">Some text can be copied from the internet or some more can be just pasted. The difference is
-      just in the making of a
-      superhuman power that arises from within just copying stuff. Some text can be copied from the internet or some
-      more can be just pasted. The difference is just in the making of a
-      superhuman power that arises from within just copying stuff</p>
+      just in the making of a superhuman power that arises from within just copying stuff. Some text can be copied from the internet or some
+      more can be just pasted. The difference is just in the making of a superhuman power that arises from within just copying 
+      stuff</p>
 
     <div class="html">
       <div class="tag-html">
@@ -112,7 +111,7 @@
 
     <div class="html">
       <div class="tag-css">
-        <p>HTML</p>
+        <p>CSS</p>
       </div>
       <div class="progressbar">
         <div class="bar-css"></div>
@@ -121,7 +120,7 @@
 
     <div class="html">
       <div class="tag-javascript">
-        <p>HTML</p>
+        <p>JavaScript</p>
       </div>
       <div class="progressbar">
         <div class="bar-javascript"></div>
@@ -130,7 +129,7 @@
 
     <div class="html">
       <div class="tag-react">
-        <p>HTML</p>
+        <p>React</p>
       </div>
       <div class="progressbar">
         <div class="bar-react"></div>
@@ -147,7 +146,7 @@
       <button id="animation">Web Animation</button>
       <button id="project">React Projects</button>
     </div>
-
+    
     <div class="category-designing showCategory">
       <a href=""><img src="img/1.png" alt=""></a>
       <a href=""><img src="img/2.png" alt=""></a>
