--- a/index.html
+++ b/index.html
@@ -142,9 +142,9 @@
 
     <h1>work</h1>
     <div class="work-category">
-      <button id="designing" class="active">Web Designing</button>
-      <button id="animation">Web Animation</button>
-      <button id="project">React Projects</button>
+      <button id="designing" class="active" onclick="showRequiredCategory(this)">Web Designing</button>
+      <button id="animation" onclick="showRequiredCategory(this)">Web Animation</button>
+      <button id="project" onclick="showRequiredCategory(this)">React Projects</button>
     </div>
     
     <div class="category-designing showCategory">
@@ -154,12 +154,12 @@
       <a href=""><img src="img/2.png" alt=""></a>
       <a href=""><img src="img/3.png" alt=""></a>
     </div>
-    <div class="category-designing hideCategory">
+    <div class="category-animation hideCategory">
       <a href=""><img src="img/1.png" alt=""></a>
       <a href=""><img src="img/2.png" alt=""></a>
       <a href=""><img src="img/3.png" alt=""></a>
     </div>
-    <div class="category-designing hideCategory">
+    <div class="category-project hideCategory">
       <a href=""><img src="img/1.png" alt=""></a>
       <a href=""><img src="img/2.png" alt=""></a>
       <a href=""><img src="img/3.png" alt=""></a>
@@ -185,7 +185,6 @@
 
 
   <script src="js/ScrollMagic.min.js"></script>
-  <script src="js/animation.gsap.min.js"></script>
   <script src="js/TimelineLite.min.js"></script>
   <script src="js/TweenMax.min.js"></script>
   <script src="js/CSSPlugin.min.js"></script>
