Everything works except Scroll functionality

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
     <h1>work</h1>
     <div class="work-category">
-      <button id="designing" class="active" onclick="showRequiredCategory(this)">Web Designing</button>
+      <button id="designing" onclick="showRequiredCategory(this)">Web Designing</button>
       <button id="animation" onclick="showRequiredCategory(this)">Web Animation</button>
       <button id="project" onclick="showRequiredCategory(this)">React Projects</button>
     </div>
